--- a/mandelbulber2/formula/ui/scator_power2.ui
+++ b/mandelbulber2/formula/ui/scator_power2.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>scator_power2</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="enabled">
    <bool>true</bool>
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>898</width>
-    <height>2376</height>
+    <height>3194</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -673,7 +673,7 @@ Multiplier:</string>
         <double>999.000000000000000</double>
        </property>
        <property name="singleStep">
-        <double>0.100000000000000</double>
+        <double>1.000000000000000</double>
        </property>
       </widget>
      </item>
