--- a/mandelbulber2/formula/ui/koch_v2.ui
+++ b/mandelbulber2/formula/ui/koch_v2.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>koch_v2</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="enabled">
    <bool>true</bool>
