change de function combo box to custom (from difs) trans add cpixel transforms cpixelDisabledByDefault;

--- a/mandelbulber2/qt/dock_rendering_engine.ui
+++ b/mandelbulber2/qt/dock_rendering_engine.ui
@@ -331,7 +331,7 @@ function:</string>
           </item>
           <item>
            <property name="text">
-            <string>In Formula</string>
+            <string>Custom</string>
            </property>
           </item>
          </widget>
@@ -1708,6 +1708,16 @@ border-radius: 3px; background: white; text-align: center; qproperty-alignment: 
  </widget>
  <customwidgets>
   <customwidget>
+   <class>MyCheckBox</class>
+   <extends>QCheckBox</extends>
+   <header>my_check_box.h</header>
+  </customwidget>
+  <customwidget>
+   <class>MyComboBox</class>
+   <extends>QComboBox</extends>
+   <header>my_combo_box.h</header>
+  </customwidget>
+  <customwidget>
    <class>MyGroupBox</class>
    <extends>QGroupBox</extends>
    <header>my_group_box.h</header>
@@ -1717,11 +1727,6 @@ border-radius: 3px; background: white; text-align: center; qproperty-alignment: 
    <class>MySpinBox</class>
    <extends>QSpinBox</extends>
    <header>my_spin_box.h</header>
-  </customwidget>
-  <customwidget>
-   <class>MyCheckBox</class>
-   <extends>QCheckBox</extends>
-   <header>my_check_box.h</header>
   </customwidget>
   <customwidget>
    <class>MyLineEdit</class>
@@ -1742,11 +1747,6 @@ border-radius: 3px; background: white; text-align: center; qproperty-alignment: 
    <class>cButtonResetSettingsFromWidget</class>
    <extends>QPushButton</extends>
    <header>buton_reset_settings_from_widget.h</header>
-  </customwidget>
-  <customwidget>
-   <class>MyComboBox</class>
-   <extends>QComboBox</extends>
-   <header>my_combo_box.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
